# j-cmd

./: .gitignore  Cargo.toml  README.ja.md  README.md  blog-article.md  j-init.cmd  j-init.ps1  j-init.sh  j-init.zsh
completions/: _j  j.bash
src/: main.rs
