[package]
name = "j"
version = "0.9.0"
edition = "2021"
description = "Fast directory jumper for Windows, Linux, and macOS"
license = "MIT"
repository = "https://github.com/your-username/j-cmd"
keywords = ["cli", "directory", "jump", "navigation", "autojump"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["wincon"] }

[profile.release]
opt-level = 3
lto = true
strip = true
